--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.3"
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.3.18"
   }
 }
